syntax = "proto2";

import "bgs/low/pb/client/content_handle_types.proto";
import "bgs/low/pb/client/rpc_types.proto";
package bgs.protocol.resources.v1;

option java_package = "bnet.protocol.resources.v1";
option java_outer_classname = "ResourceServiceProto";
option optimize_for = CODE_SIZE;
option cc_generic_services = false;
option java_generic_services = true;

message ContentHandleRequest {
  required fixed32 program = 1;
  required fixed32 stream = 2;
  optional fixed32 version = 3 [default = 1701729619];
}

service ResourcesService {
  option (.bgs.protocol.service_options) = {
    descriptor_name: "bnet.protocol.resources.Resources"
  };
  option (.bgs.protocol.sdk_service_options) = {
    outbound: true
  };
  rpc GetContentHandle(.bgs.protocol.resources.v1.ContentHandleRequest) returns (.bgs.protocol.ContentHandle) {
    option (.bgs.protocol.method_options) = {
      id: 1
    };
  }
}


